# circuit-rs

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json  tailwind.config.js
app/src/: error_template.rs  lib.rs
server/: .env  Cargo.toml  circuit.db
server/migrations/2024-01-05-065914_create_users/: up.sql
server/src/: fileserv.rs  lib.rs  main.rs  models.rs  schema.rs
server/src/entity/: user.rs
server/src/model/: db.rs  user.rs
src/: app.rs  lib.rs  main.rs  models.rs  schema.rs
src/entity/: user.rs
style/: output.css
