[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
serde = { version = "1.0.193" }

axum.workspace = true
simple_logger.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http.workspace = true
log.workspace = true
lazy_static = "1.4.0"
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15.7"
rusqlite = { version = "0.30.0", features = ["bundled"] }
